add ECS classes

--- a/Demo/Demo.vcxproj
+++ b/Demo/Demo.vcxproj
@@ -123,10 +123,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.hpp" />
+    <ClInclude Include="src\GameState.hpp" />
+    <ClInclude Include="src\StateIDs.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
