--- a/Demo/src/CMakeLists.txt
+++ b/Demo/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 #add source files used by your project here
 set(PROJECT_SRC
   ${PROJECT_DIR}/Game.cpp
+  ${PROJECT_DIR}/GameState.cpp
   ${PROJECT_DIR}/main.cpp)
