--- a/xyginext/xyginext.vcxproj.filters
+++ b/xyginext/xyginext.vcxproj.filters
@@ -25,6 +25,24 @@
     <Filter Include="Source Files\ecs">
       <UniqueIdentifier>{f48ad9f7-9ce1-4163-b82e-10ea85d29815}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\resources">
+      <UniqueIdentifier>{e61a765e-d5ab-4b6c-97ff-5fef84f78f7c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\resources">
+      <UniqueIdentifier>{40c5d66b-5d2a-4d62-8953-b3f5d1a5547a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ecs\systems">
+      <UniqueIdentifier>{2ef4882b-e0ae-4135-91ac-507013fff4d6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ecs\components">
+      <UniqueIdentifier>{4cd6ba28-0af8-4320-9413-2ddd8722ab7f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ecs\components">
+      <UniqueIdentifier>{62741d5a-2d52-4c7c-b152-83a5a2d8d023}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ecs\systems">
+      <UniqueIdentifier>{7eb7ad46-7768-4acf-98d2-21f593cbdebb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\App.cpp">
@@ -60,9 +78,6 @@
     <ClCompile Include="src\ecs\EntityManager.cpp">
       <Filter>Source Files\ecs</Filter>
     </ClCompile>
-    <ClCompile Include="src\ecs\Renderable.cpp">
-      <Filter>Source Files\ecs</Filter>
-    </ClCompile>
     <ClCompile Include="src\ecs\Scene.cpp">
       <Filter>Source Files\ecs</Filter>
     </ClCompile>
@@ -71,6 +86,21 @@
     </ClCompile>
     <ClCompile Include="src\ecs\SystemManager.cpp">
       <Filter>Source Files\ecs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\resources\FontResource.cpp">
+      <Filter>Source Files\resources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\resources\ShaderResource.cpp">
+      <Filter>Source Files\resources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ecs\components\Transform.cpp">
+      <Filter>Source Files\ecs\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ecs\components\Sprite.cpp">
+      <Filter>Source Files\ecs\components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ecs\systems\SpriteRenderer.cpp">
+      <Filter>Source Files\ecs\systems</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -116,9 +146,6 @@
     <ClInclude Include="include\xyginext\ecs\Entity.hpp">
       <Filter>Header Files\ecs</Filter>
     </ClInclude>
-    <ClInclude Include="include\xyginext\ecs\Renderable.hpp">
-      <Filter>Header Files\ecs</Filter>
-    </ClInclude>
     <ClInclude Include="include\xyginext\ecs\Scene.hpp">
       <Filter>Header Files\ecs</Filter>
     </ClInclude>
@@ -127,6 +154,21 @@
     </ClInclude>
     <ClInclude Include="include\xyginext\core\Message.hpp">
       <Filter>Header Files\core</Filter>
+    </ClInclude>
+    <ClInclude Include="include\xyginext\resources\Resource.hpp">
+      <Filter>Header Files\resources</Filter>
+    </ClInclude>
+    <ClInclude Include="include\xyginext\resources\ShaderResource.hpp">
+      <Filter>Header Files\resources</Filter>
+    </ClInclude>
+    <ClInclude Include="include\xyginext\ecs\systems\SpriteRenderer.hpp">
+      <Filter>Header Files\ecs\systems</Filter>
+    </ClInclude>
+    <ClInclude Include="include\xyginext\ecs\components\Sprite.hpp">
+      <Filter>Header Files\ecs\components</Filter>
+    </ClInclude>
+    <ClInclude Include="include\xyginext\ecs\components\Transform.hpp">
+      <Filter>Header Files\ecs\components</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
