add command system

--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -1,7 +1,6 @@
 #source files used by xyginext library
 set(PROJECT_SRC 
   ${PROJECT_DIR}/core/App.cpp
-  ${PROJECT_DIR}/core/CommandQueue.cpp
   ${PROJECT_DIR}/core/FileSystem.cpp
   ${PROJECT_DIR}/core/MessageBus.cpp
   ${PROJECT_DIR}/core/State.cpp
@@ -20,6 +19,7 @@ set(PROJECT_SRC
   ${PROJECT_DIR}/ecs/components/Text.cpp
   ${PROJECT_DIR}/ecs/components/Transform.cpp
 
+  ${PROJECT_DIR}/ecs/systems/CommandSystem.cpp
   ${PROJECT_DIR}/ecs/systems/SpriteRenderer.cpp
   ${PROJECT_DIR}/ecs/systems/TextRenderer.cpp
 
