--- a/xyginext/xyginext.vcxproj
+++ b/xyginext/xyginext.vcxproj
@@ -124,7 +124,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\core\App.cpp" />
-    <ClCompile Include="src\core\CommandQueue.cpp" />
     <ClCompile Include="src\core\FileSystem.cpp" />
     <ClCompile Include="src\core\MessageBus.cpp" />
     <ClCompile Include="src\core\State.cpp" />
@@ -140,6 +139,7 @@
     <ClCompile Include="src\ecs\Scene.cpp" />
     <ClCompile Include="src\ecs\System.cpp" />
     <ClCompile Include="src\ecs\SystemManager.cpp" />
+    <ClCompile Include="src\ecs\systems\CommandSystem.cpp" />
     <ClCompile Include="src\ecs\systems\SpriteRenderer.cpp" />
     <ClCompile Include="src\ecs\systems\TextRenderer.cpp" />
     <ClCompile Include="src\resources\FontResource.cpp" />
@@ -149,7 +149,6 @@
     <ClInclude Include="include\xyginext\Config.hpp" />
     <ClInclude Include="include\xyginext\core\App.hpp" />
     <ClInclude Include="include\xyginext\core\Assert.hpp" />
-    <ClInclude Include="include\xyginext\core\Command.hpp" />
     <ClInclude Include="include\xyginext\core\FileSystem.hpp" />
     <ClInclude Include="include\xyginext\core\Log.hpp" />
     <ClInclude Include="include\xyginext\core\Message.hpp" />
@@ -159,6 +158,7 @@
     <ClInclude Include="include\xyginext\core\SysTime.hpp" />
     <ClInclude Include="include\xyginext\ecs\Component.hpp" />
     <ClInclude Include="include\xyginext\ecs\ComponentPool.hpp" />
+    <ClInclude Include="include\xyginext\ecs\components\CommandTarget.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Sprite.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Text.hpp" />
     <ClInclude Include="include\xyginext\ecs\components\Transform.hpp" />
@@ -166,6 +166,7 @@
     <ClInclude Include="include\xyginext\ecs\Entity.hpp" />
     <ClInclude Include="include\xyginext\ecs\Scene.hpp" />
     <ClInclude Include="include\xyginext\ecs\System.hpp" />
+    <ClInclude Include="include\xyginext\ecs\systems\CommandSystem.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\SpriteRenderer.hpp" />
     <ClInclude Include="include\xyginext\ecs\systems\TextRenderer.hpp" />
     <ClInclude Include="include\xyginext\resources\Resource.hpp" />
