begin adding net host class

--- a/xyginext/src/CMakeLists.txt
+++ b/xyginext/src/CMakeLists.txt
@@ -25,6 +25,9 @@ set(PROJECT_SRC
   ${PROJECT_DIR}/ecs/systems/SpriteRenderer.cpp
   ${PROJECT_DIR}/ecs/systems/TextRenderer.cpp
 
+  ${PROJECT_DIR}/network/NetConf.cpp
+  ${PROJECT_DIR}/network/NetHost.cpp
+
   ${PROJECT_DIR}/resources/FontResource.cpp
   ${PROJECT_DIR}/resources/ShaderResource.cpp
   
