fixx linking enet on windows

--- a/xyginext/CMakeLists.txt
+++ b/xyginext/CMakeLists.txt
@@ -32,9 +32,11 @@ if(UNIX)
   find_package(X11 REQUIRED)
 endif()
 find_package(OpenGL REQUIRED)
+find_package(ENet REQUIRED)
 
 include_directories(
-  ${SFML_INCLUDE_DIR}  
+  ${SFML_INCLUDE_DIR} 
+  ${ENET_INCLUDE_DIR}
   ${CMAKE_SOURCE_DIR}/include)
   
 
@@ -51,6 +53,7 @@ endif()
 target_link_libraries(${PROJECT_NAME}
   ${SFML_LIBRARIES}
   ${SFML_DEPENDENCIES}
+  ${ENET_LIBRARY}
   ${OPENGL_LIBRARIES})
 
 
